@@ -1,4 +1,8 @@
 
+2010-06-09
+  Refactored message reply
+  Moved message finding code into Message model.
+
 2010-06-08
   Bumped versionName to: 1.3.8
   Fixed NPE bug under 2.1-u1
